--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.3.0
+  flutter_riverpod: ^2.1.1
+  state_notifier: ^0.7.2+1
+  freezed_annotation: ^2.2.0
+  go_router: ^5.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  freezed: ^2.2.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
