--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   freezed_annotation: ^2.2.0
   go_router: ^5.2.0
   cloud_firestore: ^4.1.0
+  google_sign_in: ^5.4.2
+  flutter_signin_button: ^2.0.0
+  firebase_auth: ^4.1.4
 
 dev_dependencies:
   flutter_test:
