--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_sign_in: ^5.4.2
   flutter_signin_button: ^2.0.0
   firebase_auth: ^4.1.4
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
