--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   uuid: ^3.0.7
   firebase_storage: ^11.0.6
   image_picker: ^0.8.6
-  share: ^2.0.4
+  share_plus: ^6.3.0
 
 dev_dependencies:
   flutter_test:
