--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image_picker: ^0.8.6
   share_plus: ^6.3.0
   timelines: ^0.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
