--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,11 @@ dependencies:
   share_plus: ^6.3.0
   timelines: ^0.1.0
   intl: ^0.17.0
+  flutter_login: ^3.2.0
+  font_awesome_flutter: ^9.2.0
+  shared_preferences: ^2.0.15
+  path_provider: ^2.0.11
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
