launcher_urlで該当のurlに遷移できるようにした。

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   shared_preferences: ^2.0.15
   path_provider: ^2.0.11
   path: ^1.8.2
+  http: ^0.13.5
+  url_launcher: ^6.1.7
+  html: ^0.15.1
 
 dev_dependencies:
   flutter_test:
